Fixed feedbackType becoming smaller on small devices

--- a/new_stylesheet.css
+++ b/new_stylesheet.css
@@ -553,7 +553,8 @@ th {
 	
 	#eventSection .event,
 	#stories .story ,
-	#keypeople .story{
+	#keypeople .story,
+	.feedbackType {
 		float: none;
 		text-align: left;
 		width: 100%;
